@@ -1,4 +1,5 @@
 Changes in QMPlay2 build 15.12.25:
+	- KF5 Breeze style fixes in full screen,
 	- Qt5 <= 5.2 compilation fixes,
 	- OpenGL 2 bugfix,
 
